--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
@@ -13,7 +13,7 @@
         <div class="modal-content shadow-lg rounded-3">
             <form id="addChildForm" onsubmit="AccSetupGL.AddChild(); return false;">
                 <div class="modal-header text-white" style="background-color: #0c213a !important;">
-                    <h5 class="modal-title fw-bold">Add</h5>
+                    <h5 class="modal-title fw-bold">New Account</h5>
                     <button type="button" class="btn-close text-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-4">
@@ -46,15 +46,13 @@
                         <div class="flex flex-col space-y-2">
                             @Html.LabelFor(x => x.GLName, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.GLName, new { @class = "form-control" })
-                            @* @Html.ValidationMessageFor(x => x.GLName, "", new { @class = "text-danger" }) *@
-                            @Html.ValidationMessageFor(x => x.GLName)
+                            <span class="text-danger" data-valmsg-for="GLName"></span>
                         </div>
 
                         <div class="flex flex-col space-y-2">
                             @Html.LabelFor(x => x.GLCode, new { @class = "form-label required" })
                             @Html.TextBoxFor(x => x.GLCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                            @* @Html.ValidationMessageFor(x => x.GLCode, "", new { @class = "text-danger" }) *@
-                            @Html.ValidationMessageFor(x => x.GLCode)
+                            <span class="text-danger" data-valmsg-for="GLCode"></span>
                         </div>
 
                         <div class="flex flex-col space-y-2">
@@ -66,7 +64,7 @@
                     </div>
                 </div>
                 <div class="modal-footer bg-light d-flex justify-content-between align-items-center">
-                    <button type="submit" class="btn btn-success">Add</button>
+                    <button type="submit" class="btn btn-success">Submit</button>
                     <button type="button" class="btn btn btn-secondary " data-bs-dismiss="modal">Cancel</button>
                 </div>
 
