--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TicketMaster/List.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "Ticket List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    string dashboardUrl = CoditechAdminSettings.DashboardUrl;
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -15,7 +16,7 @@
                         <div>
                             @if (!Model.IsTicketReplied)
                             {
-                                <a class=" btn btn-sm btn-soft-secondary" href="/dashboard/index" role="button">
+                                <a class=" btn btn-sm btn-soft-secondary" href="..@dashboardUrl" role="button">
                                     <i class="fas fa-arrow-left me-2"></i>Back
                                 </a>
                                 <a class=" btn btn-sm btn-soft-primary " href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Raise Ticket</a>
