--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditTaskScheduler.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditTaskScheduler.cshtml
@@ -27,11 +27,11 @@
                             <div class="col">
                                 @if (Model.TaskSchedulerMasterId > 0)
                                 {
-                                    <h4 class="card-title">Update Batch Scheduler Details: @Model.SchedulerName</h4>
+                                    <h4 class="card-title">Update Scheduler Details: @Model.SchedulerName</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Create Batch Scheduler</h4>
+                                    <h4 class="card-title">Create Scheduler</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -63,7 +63,14 @@
                                         @Html.TextBoxFor(x => x.ExpireDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ExpireDate)
                                     </div>
-                                </div>                               
+                                </div>
+                                <div class="col-lg-3">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.ExpireTime, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.ExpireTime, new { @class = "form-control", type = "time" })
+                                        @Html.ValidationMessageFor(x => x.ExpireTime)
+                                    </div>
+                                </div>
                                 <div class="col-lg-6" id="weeklyScheduleDiv">
                                     <div class="mb-3 multiselect-dropdown">
                                         @Html.LabelFor(x => x.SelectedWeekDays, new { @class = "form-label required" })
@@ -78,7 +85,7 @@
                                             @Html.CheckBoxFor(x => x.IsEnabled, new { @class = "form-check-input" })
                                         </div>
                                     </div>
-                                </div>
+                                </div> 
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.ConfiguratorId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
@@ -145,196 +152,3 @@
         });
     </script>
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* 15feb
-             $(function () {
-            function updateExpiryDate() {
-                var selectedFrequency = $("#SchedulerFrequency").val();
-                var startDate = $("#StartDate").datepicker("getDate");
-
-                if (selectedFrequency === "OneTime" && startDate) {
-                    $("#ExpireDate").datepicker("setDate", startDate);
-                    $("#ExpireDate").prop("readonly", true);
-                } else {
-                    $("#ExpireDate").prop("readonly", false);
-                }
-            }
-
-            // Start Date Datepicker
-            $("#StartDate").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
-                language: "en",
-                autoSize: true,
-                yearRange: "2022:2035",
-                minDate: new Date(2022, 0, 1),
-                maxDate: new Date(2035, 11, 31),
-                onSelect: function () {
-                    updateExpiryDate();
-                }
-            });
-
-            // Expiry Date Datepicker
-            $("#ExpireDate").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
-                language: "en",
-                autoSize: true,
-                yearRange: "2022:2035",
-                minDate: new Date(2022, 0, 1),
-                maxDate: new Date(2035, 11, 31)
-            });
-
-            // Scheduler Frequency Change Event
-            $("#SchedulerFrequency").change(function () {
-                updateExpiryDate();
-            });
-
-            function loadWeeklySchedulerPartial() {
-            var selectedFrequency = $("#SchedulerFrequency").val();
-            if (selectedFrequency === "Weekly") {
-                $.ajax({
-                    url: '/GeneralBatchMaster/LoadWeeklySchedulerPartial',
-                    type: 'GET',
-                    success: function (response) {
-                        $("#weeklyScheduleDiv").html(response);
-                    },
-                    error: function () {
-                        alert("Error loading weekly scheduler.");
-                    }
-                });
-            } else {
-                $("#weeklyScheduleDiv").html("");
-            }
-        }
-
-        $("#SchedulerFrequency").change(function () {
-            updateExpiryDate();
-            loadWeeklySchedulerPartial();
-        });
-
-
-        loadWeeklySchedulerPartial();
-        }); *@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@* @section scripts {
-    <script type="text/javascript">
-                        $(function () {
-            function updateExpiryDate() {
-                var selectedFrequency = $("#SchedulerFrequency").val();
-                var startDate = $("#StartDate").datepicker("getDate");
-
-                if (selectedFrequency === "OneTime" && startDate) {
-                    $("#ExpireDate").datepicker("setDate", startDate);
-                    $("#ExpireDate").prop("readonly", true);
-                } else {
-                    $("#ExpireDate").prop("readonly", false);
-                }
-            }
-
-            // Start Date Datepicker
-            $("#StartDate").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
-                language: "en",
-                autoSize: true,
-                yearRange: "2022:2035",
-                minDate: new Date(2022, 0, 1),
-                maxDate: new Date(2035, 11, 31),
-                onSelect: function () {
-                    updateExpiryDate();
-                }
-            });
-
-            // Expiry Date Datepicker
-            $("#ExpireDate").datepicker({
-                changeMonth: true,
-                changeYear: true,
-                dateFormat: "@AdminGeneralHelper.DateFormatForCalendar()",
-                language: "en",
-                autoSize: true,
-                yearRange: "2022:2035",
-                minDate: new Date(2022, 0, 1),
-                maxDate: new Date(2035, 11, 31)
-            });
-
-            // Scheduler Frequency Change Event
-            $("#SchedulerFrequency").change(function () {
-                updateExpiryDate();
-            });
-        });
-    </script>
-} *@
