--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/_ChildModel.cshtml
@@ -61,14 +61,13 @@
                                 @Html.CheckBoxFor(x => x.IsGroup, new { @class = "form-check-input" })
                             </div>
                         </div>
+                        <div id="bankContainer" class="mt-4"></div>
                     </div>
                 </div>
                 <div class="modal-footer bg-light d-flex justify-content-between align-items-center">
                     <button type="submit" class="btn btn-success">Submit</button>
                     <button type="button" class="btn btn btn-secondary " data-bs-dismiss="modal">Cancel</button>
                 </div>
-
-
             </form>
         </div>
     </div>
