Code Correction. GMSD-421 TOOLKIT - Running Number Update Causes Centre and Financial Year Dropdown to Become Blank

--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -35,7 +35,7 @@
                 <div class="form-group row my-3">
                     <div class="col-sm-6">
                         <div class="custom-control custom-switch switch-success">
-                            @Html.CheckBoxFor(x => x.RememberMe, new { @class = "custom-control-input" ,@id = "customSwitchSuccess" })
+                            @Html.CheckBoxFor(x => x.RememberMe, new { @class = "custom-control-input"})
                              <label class="form-label text-muted" for="customSwitchSuccess">Remember me</label> 
                         </div>
                     </div>
