--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRunningNumbers/CreateEdit.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     Model.DisplayFormat = Model.GeneralRunningNumberId > 0 ? Model.DisplayFormat : "<centrecode><separator><prefix><separator><currentsequence>";
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "GeneralRunningNumbers.GetFinancialYearListByCentreCode()", IsDisabled = Model.GeneralRunningNumberId > 0 };
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "GeneralRunningNumbers.GetFinancialYearListByCentreCode()", IsDisabled = Model.GeneralRunningNumberId > 0 };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -40,7 +40,7 @@
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
+                                        @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
@@ -51,7 +51,7 @@
                                    DropdownType = DropdownTypeEnum.FinancialYear.ToString(),
                                    DropdownName = "GeneralFinancialYearId",
                                    DropdownSelectedValue = Model.GeneralFinancialYearId.ToString(),
-                                   Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}" : ""
+                                   Parameter = !string.IsNullOrEmpty(Model.CentreCode) ? $"{Model.CentreCode}" : ""
                                })
                                         @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
                                     </div>
