--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
@@ -1,143 +1,190 @@
 ﻿@model AccGLTransactionViewModel
 @{
-    ViewBag.Title = Model.AccGLTransactionId > 0 ? "Update Transaction" : "Add Transaction";
-    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = ViewContext.RouteData.Values["action"].ToString();
-
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.CentreCode, ChangeEvent = "CoditechCommon.LoadListByCentreCode('" + @controllerName + "','" + @actionName + "')" };
-    DropdownViewModel financialYearDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.FinancialYear.ToString(), DropdownName = "financialYearDropdown", DropdownSelectedValue = Model.GeneralFinancialYearId.ToString(), Parameter = Model.GeneralFinancialYearId.ToString(), ChangeEvent = "CoditechCommon.LoadListByCentreCodeAndDepartmentId('" + @controllerName + "','" + @actionName + "')" };
-    DropdownViewModel accSetupTransactionType = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupTransactionType.ToString(), DropdownName = "accSetupTransactionType", DropdownSelectedValue = Model.AccSetupTransactionTypeId.ToString(), ChangeEvent = "CoditechCommon.LoadListByBalanceSheet('" + @controllerName + "','" + @actionName + "')" };
-    // DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode };
-    DropdownViewModel accSetupBalanceSheetTypeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupBalanceSheetType.ToString(), DropdownName = "AccSetupBalanceSheetTypeId", DropdownSelectedValue = Model.AccSetupBalanceSheetTypeId.ToString(), ChangeEvent = "CoditechCommon.LoadListByCentreCodeAndDepartmentId('" + @controllerName + "','" + @actionName + "')" };
-    DropdownViewModel accSetupBalanceSheetDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupBalanceSheet.ToString(), DropdownName = "AccSetupBalanceSheetId", DropdownSelectedValue = Model.AccSetupBalanceSheetId.ToString() };
+	ViewBag.Title = Model.AccGLTransactionId > 0 ? "Update Transaction" : "Add Transaction";
+	string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+	string actionName = ViewContext.RouteData.Values["action"].ToString();
+	if (string.IsNullOrEmpty(Model.SelectedCentreCode))
+	{
+		List<UserAccessibleCentreModel> accessibleCentreList = SessionHelper.GetDataFromSession<UserModel>(AdminConstants.UserDataSession)?.AccessibleCentreList;
+		if (accessibleCentreList != null && accessibleCentreList.Count == 1)
+		{
+			Model.SelectedCentreCode = accessibleCentreList[0].CentreCode;
+		}
+	}
+	DropdownViewModel accSetupTransactionTypeDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccSetupTransactionType.ToString(), DropdownName = "AccSetupTransactionTypeId", DropdownSelectedValue = Model.AccSetupTransactionTypeId.ToString() };
+	DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "AccGLTransaction.GetFinancialYearListByCentreCode()" };
+	DropdownViewModel balanceSheetDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseAccountBalanceSheet.ToString(), DropdownName = "AccSetupBalanceSheetId", DropdownSelectedValue = Model.AccSetupBalanceSheetId.ToString() };
+	DropdownViewModel financialYearDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.FinancialYear.ToString(), DropdownName = "GeneralFinancialYearId", DropdownSelectedValue = Model.GeneralFinancialYearId.ToString(), Parameter = !string.IsNullOrEmpty(Model.SelectedCentreCode) ? $"{Model.SelectedCentreCode}" : "" };
 }
 
-<!-- Page Content-->
+<!-- Page Content -->
 <div class="page-content mt-5">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                @if (Model.AccGLTransactionId > 0)
-                                {
-                                    <h4 class="card-title">Update Transaction</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="card-title">Create Transaction</h4>
-                                }
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div>
-                    <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-                        {
-                            @Html.HiddenFor(m => m.AccSetupBalanceSheetId)
-                            @Html.HiddenFor(m => m.GeneralFinancialYearId)
-                            @Html.HiddenFor(m => m.AccSetupTransactionTypeId)
-                            <div class="row">
-                                <div class="col-lg-8">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.CentreCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccSetupBalanceSheetTypeId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupBalanceSheetTypeDropdown)
-                                        @Html.ValidationMessageFor(x => x.AccSetupBalanceSheetTypeId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccSetupBalanceSheetId, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml",  accSetupBalanceSheetDropdown) 
-                                        @Html.ValidationMessageFor(x => x.AccSetupBalanceSheetId)
-                                    </div>
-                                </div>
-                                 <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label required"})
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", financialYearDropdown)
-                                        @Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
-                                    </div>
-                                </div>
-                                 <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.AccSetupTransactionTypeId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupTransactionType)
-                                        @Html.ValidationMessageFor(x => x.AccSetupTransactionTypeId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.TransactionDate, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.TransactionDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readonly" })
-                                        @Html.ValidationMessageFor(x => x.TransactionDate)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label " })
-                                        @Html.TextAreaFor(x => x.NarrationDescription, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.NarrationDescription)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.VoucherNumber , new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.VoucherNumber, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
-                                        @Html.ValidationMessageFor(x => x.VoucherNumber)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.TransactionEnum, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.TransactionEnum, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
-                                        @Html.ValidationMessageFor(x => x.TransactionEnum)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.TransactionRefId, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.TransactionRefId, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
-                                        @Html.ValidationMessageFor(x => x.TransactionRefId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.ModeCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.ModeCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
-                                        @Html.ValidationMessageFor(x => x.ModeCode)
-                                    </div>
-                                </div>
-                                @* <div class="Idcol-lg-6"> *@
-                                @*     <div class="mb-3"> *@
-                                @*         @Html.LabelFor(x => x., new { @class = "form-label required" }) *@
-                                @*         @Html.TextBoxFor(x => x.AccBalancesheetCode, new { @class = "form-control", onkeypress = "return CoditechCommon.AvoidSpacing()" }) *@
-                                @*         @Html.ValidationMessageFor(x => x.AccBalancesheetCode) *@
-                                @*     </div> *@
-                                @* </div> *@
-                                <div class="col-lg-6">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/Cancel?SelectedParameter1=@Model.AccSetupBalanceSheetId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-                        }
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="card">
+					<div class="card-header">
+						<h4 class="card-title">
+							@(Model.AccGLTransactionId > 0 ? "Update Transaction" : "Create Transaction")
+						</h4>
+					</div>
+					<div class="card-body">
+						@using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = "frmWorkoutPlanDetails" }))
+						{
+							@Html.AntiForgeryToken()
+
+							@Html.HiddenFor(x => x.TransactionDetailsData)
+
+							<div class="row">
+								<div class="col-lg-6">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+										@Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
+										@Html.ValidationMessageFor(x => x.SelectedCentreCode)
+									</div>
+								</div>
+
+								<div class="col-lg-3">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.AccSetupBalanceSheetId, new { @class = "form-label required" })
+										@Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", balanceSheetDropdown)
+										@Html.ValidationMessageFor(x => x.AccSetupBalanceSheetId)
+									</div>
+								</div>
+
+								<div class="col-lg-3">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.GeneralFinancialYearId, new { @class = "form-label required" })
+										@Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", financialYearDropdown)
+										@Html.ValidationMessageFor(x => x.GeneralFinancialYearId)
+									</div>
+								</div>
+
+								<div class="col-lg-2">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.AccSetupTransactionTypeId, new { @class = "form-label required" })
+										@Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", accSetupTransactionTypeDropdown)
+										@Html.ValidationMessageFor(x => x.AccSetupTransactionTypeId)
+									</div>
+								</div>
+
+								<div class="col-lg-3">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.TransactionDate, new { @class = "form-label required" })
+										@Html.TextBoxFor(x => x.TransactionDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "readonly" })
+										@Html.ValidationMessageFor(x => x.TransactionDate)
+									</div>
+								</div>
+								<div class="col-lg-2">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.NarrationDescription, new { @class = "form-label required " })
+										@Html.TextAreaFor(x => x.NarrationDescription, new { @class = "form-control" })
+										@Html.ValidationMessageFor(x => x.NarrationDescription)
+									</div>
+								</div>
+								<div class="col-lg-2">
+									<div class="mb-3">
+										@Html.LabelFor(x => x.TransactionRefId, new { @class = "form-label required" })
+										@Html.TextBoxFor(x => x.TransactionRefId, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
+										@Html.ValidationMessageFor(x => x.TransactionRefId)
+									</div>
+								</div>
+								@* <div class="col-lg-2"> *@
+								@*     <div class="mb-3"> *@
+								@*         @Html.LabelFor(x => x.PaymentModeEnum, new { @class = "form-label required" }) *@
+								@*         @Html.TextBoxFor(x => x.PaymentModeEnum, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" }) *@
+								@*         @Html.ValidationMessageFor(x => x.PaymentModeEnum) *@
+								@*     </div> *@
+								@* </div> *@
+								<!-- Add Row Button -->
+								<div class="mb-3">
+									<button type="button" id="addRowButton" class="btn btn-sm btn-soft-success btn-circle ">
+										<i class='fas ti-plus'></i>
+									</button>
+								</div>
+
+								<!-- Transaction Details Table -->
+								<div id="accGLTransactionDetailsId">
+									<table id="example" class="table table-striped">
+										<thead>
+											<tr>
+												<th>Account</th>
+												<th>Narration</th>
+												<th>Debit</th>
+												<th>Credit</th>
+												<th>Actions</th>
+											</tr>
+										</thead>
+										<tbody> </tbody>
+										<tfoot id="tableDebitCredit" style="display: none">
+											<tr>
+												<th></th>
+												<th></th>
+												<th>
+													<input type="text" id="debitBal" class="form-control" value="0" style="text-align: right;" disabled />
+												</th>
+												<th>
+													<input type="text" id="creditBal" class="form-control" value="0" style="text-align: right;" disabled />
+												</th>
+											</tr>
+										</tfoot>
+									</table>
+								</div>
+							</div>
+
+							//<button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+							<button type="submit" class="btn btn-success" onclick="AccGLTransaction.SaveData()">@AdminResources.LabelSave</button>
+
+							<a href="../@controllerName/Cancel?SelectedParameter1=@Model.AccSetupBalanceSheetId" class="btn btn-secondary">
+								<i class="ft-x"></i>@AdminResources.LabelCancel
+							</a>
+						}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+
+
+<!-- ✅ Ensure jQuery loads first -->
+<!-- jQuery (Required for Typeahead.js) -->
+<!-- Load jQuery first -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Load Typeahead.js (Twitter Typeahead) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+
+<!-- OR Bootstrap 3 Typeahead (for Bootstrap users) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.2/bootstrap3-typeahead.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+<script src="~/js/coditech/Accounts/AccGLTransaction.js"></script>
+<script>
+
+	 document.addEventListener("DOMContentLoaded", function () {
+		console.log(typeof jQuery);
+		console.log(typeof $.fn.typeahead);
+	});
+	$(document).ready(function () {
+		// Check if AccGLTransaction is defined
+		if (typeof AccGLTransaction !== "undefined" && AccGLTransaction !== null) {
+
+			// Attach event to Add Row button
+			$("#addRowButton").click(function () {
+				AccGLTransaction.AddRow();
+			});
+
+			// Ensure totals update when values change
+			$(document).on("input", ".debit-field, .credit-field", function () {
+				AccGLTransaction.calculateTotals();
+			});
+
+			// Load transaction details if available
+			// AccGLTransaction.GetTransactionDetailsByType(@Model.AccSetupBalanceSheetTypeId);
+		} else {
+			console.error("⚠️ AccGLTransaction is not loaded. Check script path or errors.");
+		}
+	});
+</script>
