Code correction for OrganisationCentrewiseAccSetup

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/OrganisationCentrewiseAccountSetup/_OrganisationCentrewiseAccountSetup.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/OrganisationCentrewiseAccountSetup/_OrganisationCentrewiseAccountSetup.cshtml
@@ -2,8 +2,9 @@
 @{
     Layout = null;
     DropdownViewModel currencyDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.Currency.ToString(), DropdownName = "GeneralCurrencyMasterId", DropdownSelectedValue = Model.GeneralCurrencyMasterId.ToString() };
+    
 }
-
+@Html.HiddenFor(m => m.OrganisationCentrewiseAccountSetupId)
 <div class="col-lg-6">
     <div class="mb-3">
         @Html.LabelFor(x => x.GeneralCurrencyMasterId, new { @class = "form-label required" })
