--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/OrganisationCentrewiseAccountSetup/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/OrganisationCentrewiseAccountSetup/CreateEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrganisationCentrewiseAccountSetupViewModel
 @{
-    ViewBag.Title = "Organisation Centrewise Account Setup";
+    ViewBag.Title = Model.OrganisationCentrewiseAccountSetupId > 0 ? "Update Organisation Centrewise Account Setup" : "Add Organisation Centrewise Account Setup";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel()
@@ -33,8 +33,6 @@
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
-                          @Html.HiddenFor(m => m.OrganisationCentrewiseAccountSetupId)
-
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
