--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserModule/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralUserModule/_List.cshtml
@@ -24,7 +24,7 @@
                             <td>@item.ModuleSeqNumber</td>
                             <td>@item.ModuleTooltip</td>
                             <td style="text-align:center"><i class="@item.ModuleIconName"></i></td>
-                            <td>@item.ModuleColorClass</td>
+                            <td>@item.ModuleFormName</td>
                             <td>@item.ModuleIconPath</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.ModuleActiveFlag)
