--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskScheduler/CreateEditTaskSchedulerMaster.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/TaskScheduler/CreateEditTaskSchedulerMaster.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TaskSchedulerViewModel
 @{
-    ViewBag.Title = Model.TaskSchedulerMasterId > 0 ? "Update Batch Scheduler Details" : "Add Batch Scheduler";
+    ViewBag.Title = Model.TaskSchedulerMasterId > 0 ? "Update Scheduler Details" : "Add Scheduler";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = Model.TaskSchedulerMasterId > 0 ? "UpdateTaskSchedulerDetails" : "CreateTaskScheduler";
 
@@ -30,6 +30,7 @@
                     {
                         @Html.HiddenFor(m => m.TaskSchedulerMasterId)
                         @Html.HiddenFor(m => m.SchedulerCallFor)
+                        @Html.HiddenFor(m => m.HangfireJobId)
                         @Html.HiddenFor(x => x.WeekDays)
                         <div class="row">
                             <div class="col-lg-4">
