Code Check AccsetupGL

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/AccSetupGL.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupGL/AccSetupGL.cshtml
@@ -45,8 +45,7 @@
                             <div id="AccSetupGLTreeDivId">
                                 @if (Model.AccSetupBalancesheetId > 0)
                                 {
-                                    @Html.Partial("~/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml", Model)
-                                    ;
+                                    @Html.Partial("~/Views/Accounts/AccSetupGL/_UpdateAccountSetupGL.cshtml", Model);
                                 }
                             </div>
                         </div>
